--- a/tanni/templates/tanni/reg.html
+++ b/tanni/templates/tanni/reg.html
@@ -69,14 +69,21 @@ td, th {
 		<th></th><th>月</th><th>火</th><th>水</th><th>木</th><th>金</th><th>土</th>
 	</thead>
 	<tbody>
-		{% for jk in time_table %}
-        <tr>
-            <th scope="row">{{ forloop.counter }}限</th>
-            {% for j in jk %}
-                <td>{{ j }}</td>
-            {% endfor %}
-        </tr>
-        {% endfor %}
+		<tr>
+<th>9:00-10:40</th><td>bla</td><td></td><td></td><td></td><td></td><td></td>
+</tr>
+<tr>
+<th>10:50-12:30</th><td></td><td></td><td></td><td></td><td></td><td></td>
+</tr>
+<tr>
+<th>13:10-14:50</th><td></td><td></td><td></td><td></td><td></td><td></td>
+</tr>
+<tr>
+<th>15:00-16:40</th><td></td><td></td><td></td><td></td><td></td><td></td>
+</tr>
+<tr>
+<th>16:50-18:30</th><td></td><td></td><td></td><td></td><td></td><td></td>
+</tr>
 	</tbody>
 </table>
 
@@ -158,6 +165,7 @@ td, th {
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script>
 var CF = 0;
+var OF = 0;
 var CF2 = [0,0,0,0,0,0];
 var subjName = ["専門","共通数理","言語・情報系","人文社会系教養","共通健康","共通工学系教養"];
 var SF = 0;
@@ -175,6 +183,7 @@ function myFunction() {
   var x = document.getElementById("myDIV");
   if (x.style.display === "none") {
     x.style.display = "block";
+	OF = 0;
   } 
   else{
   x.style.display = "none";
@@ -205,6 +214,7 @@ function myFunction5(){
   var x = document.getElementById("myDIV5");
   if (x.style.display === "none") {
     x.style.display = "block";
+	OF = 1;
   }
   else{
   x.style.display = "none";
@@ -276,12 +286,47 @@ function choose1() {
 			}
 			document.getElementById("week").innerHTML = table.rows[0].cells[cellId+1].innerHTML;
 			document.getElementById("period").innerHTML = rowId;
+			
+			if(CF === 1){
+				if(document.getElementById("cSubjId").innerHTML === "無" && OF === 1){
+				CF = 0;
+				if(SF === 1)
+					choose2();
+				if(CF3 === 1)
+					choose3();
+				myFunction5();
+				myFunction();
+				OF = 0;		
+				CF = 1;
+				}
+				else if(document.getElementById("cSubjId").innerHTML != "無" && OF === 0){
+				CF = 0;
+				if(SF === 1)
+					choose2();
+				if(CF3 === 1)
+					choose3();
+				myFunction();
+				myFunction5();
+				OF = 1;	
+				CF = 1;
+				}
+				else {
+				CF = 0;
+				if(SF === 1)
+					choose2();
+				if(CF3 === 1)
+					choose3();
+				CF = 1;
+				}
+			}
 			if(CF === 0){
 				if(document.getElementById("cSubjId").innerHTML === "無"){
 				myFunction();
+				OF = 0;
 				}
 				else{
 				myFunction5();
+				OF = 1;
 				}
 				myFunction6();
 				CF = 1;
