--- a/tanni/templates/tanni/sim.html
+++ b/tanni/templates/tanni/sim.html
@@ -1,51 +1,53 @@
 {% extends 'tanni/base.html' %}
 {% block style %}
 <style>
-.center {
-	margin: auto;
-	width: 50%;
-	text-align: center;
-	border: 0px solid green;
-	padding: 10px;
-}
-table.a {
-	font-family: arial, sans-serif;
-	border-collapse: collapse;
-	width: 100%;
-}
+	.center {
+		margin: auto;
+		width: 50%;
+		text-align: center;
+		border: 0px solid green;
+		padding: 10px;
+	}
 
-table.b { 
-	font-family: arial, sans-serif;
-	border-collapse: collapse;
-	width: 30%;
-}
+	table.a {
+		font-family: arial, sans-serif;
+		border-collapse: collapse;
+		width: 100%;
+	}
 
-td, th {
-	border: 1px solid #dddddd;
-	text-align: left;
-	padding: 8px;
-}
+	table.b {
+		font-family: arial, sans-serif;
+		border-collapse: collapse;
+		width: 30%;
+	}
 
-.wrapper{
-  display:flex;
-  flex-direction:row;
-}
+	td,
+	th {
+		border: 1px solid #dddddd;
+		text-align: left;
+		padding: 8px;
+	}
 
-.right{
-	width:50%;
-}
+	.wrapper {
+		display: flex;
+		flex-direction: row;
+	}
 
-.left{
-	width:50%;
-}
+	.right {
+		width: 50%;
+	}
 
-#myDIV {
-	width: 100%;
-	padding: 0px 0;
-	text-align: left;
-	background-color: none;
-	margin-top: 0px;
-}
+	.left {
+		width: 50%;
+	}
+
+	#myDIV {
+		width: 100%;
+		padding: 0px 0;
+		text-align: left;
+		background-color: none;
+		margin-top: 0px;
+	}
 </style>
 {% endblock %}
 
@@ -56,133 +58,197 @@ td, th {
 <p>科目群ごとに取得した単位数を入力し、確定をクリックしてください。</p>
 <table class="a">
 	<thread>
-		<th>科目群</th><th>単位数</th>
+		<th>科目群</th>
+		<th>単位数</th>
 	</thread>
 	<tr>
-		<td>専門</td><td><input type="number" id="s1" name="spec" min="0" max="99"  value="0"></td>
+		<td>専門</td>
+		<td><input type="number" id="s1" name="spec" min="0" max="99" value="0"></td>
 	</tr>
 	<tr>
-		<td>共通数理</td><td><input type="number" id="s2" name="math" min="0" max="99"  value="0"></td>
+		<td>共通数理</td>
+		<td><input type="number" id="s2" name="math" min="0" max="99" value="0"></td>
 	</tr>
 	<tr>
-		<td>言語・情報系</td><td><input type="number" id="s3" name="lang" min="0" max="99"  value="0"></td>
+		<td>言語・情報系</td>
+		<td><input type="number" id="s3" name="lang" min="0" max="99" value="0"></td>
 	</tr>
 	<tr>
-		<td>人文社会系教養</td><td><input type="number" id="s4" name="social" min="0" max="99" value="0"></td>
+		<td>人文社会系教養</td>
+		<td><input type="number" id="s4" name="social" min="0" max="99" value="0"></td>
 	</tr>
 	<tr>
-		<td>共通健康</td><td><input type="number" id="s5" name="health" min="0" max="99" value="0"></td>
+		<td>共通健康</td>
+		<td><input type="number" id="s5" name="health" min="0" max="99" value="0"></td>
 	</tr>
 	<tr>
-		<td>共通工学系教養</td><td><input type="number" id="s6" name="engine" min="0" max="99" value="0"></td>
+		<td>共通工学系教養</td>
+		<td><input type="number" id="s6" name="engine" min="0" max="99" value="0"></td>
 	</tr>
 </table>
 
 <div class="center">
-	<button onclick="myFunction();calculate()">確定</button>
+	<button onclick="myFunction()">確定</button>
 </div>
 
-<div class="wrapper">
-<div class='left'>
-<div id="myDIV" style="display:none"><p>
-	＜スラサポ登録分＞
-		<table class="b">
-			<tr>
-				<td>専門</td><td></td>
-			</tr>
-			<tr>
-				<td>共通数理</td><td></td>
-			</tr>
-			<tr>
-				<td>言語・情報系</td><td></td>
-			</tr>
-			<tr>
-				<td>人文社会系教養</td><td></td>
-			</tr>
-			<tr>
-				<td>共通健康</td><td></td>
-			</tr>
-			<tr>
-				<td>共通工学系教養</td><td></td>
-			</tr>
-			<tr>
-				<td>取得済み単位合計</td><td><a id=totalcrd></a></td>
-			</tr>
-		</table>
-	</p>
-</div>
-</div>
+<div class="wrapper" id="myDIV" style="display:none">
+	<div class='left'>
+		<div>
+			<p>
+				＜スラサポ登録分＞
+			<table class="b">
+				<tr>
+					<td>専門</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>共通数理</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>言語・情報系</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>人文社会系教養</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>共通健康</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>共通工学系教養</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>取得済み単位合計</td>
+					<td><a id=totalcrd></a></td>
+				</tr>
+			</table>
+			</p>
+		</div>
+	</div>
 
-<div class='right'>
-<div id="myDIV2" style="display:none"><p>
+	<!-- <div class='right'>
+		<div id="myDIV2" style="display:none">
+			<p>
 
-	＜卒業に必要な残りの単位＞
-		<table class="b">
-			<tr>
-				<td>専門</td><td></td>
-			</tr>
-			<tr>
-				<td>共通数理</td><td></td>
-			</tr>
-			<tr>
-				<td>言語・情報系</td><td></td>
-			</tr>
-			<tr>
-				<td>人文社会系教養</td><td></td>
-			</tr>
-			<tr>
-				<td>共通健康</td><td></td>
-			</tr>
-			<tr>
-				<td>共通工学系教養</td><td></td>
-			</tr>
-			<tr>
-				<td>卒業に必要な残りの単位合計</td><td></td>
-			</tr>
-		</table>
+				＜卒業に必要な残りの単位＞
+			<table class="b">
+				<tr>
+					<td>専門</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>共通数理</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>言語・情報系</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>人文社会系教養</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>共通健康</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>共通工学系教養</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>卒業に必要な残りの単位合計</td>
+					<td></td>
+				</tr>
+			</table>
 
-</p></div>
-</div>
+			</p>
+		</div>
+	</div> -->
 </div>
 
 {% endblock %}
 
 {% block script %}
 <script>
-var totalcrd = 0;
-  
-function myFunction() {
-  var x = document.getElementById("myDIV");
-  var y = document.getElementById("myDIV2");
-  if (x.style.display === "none" && y.style.display === "none") {
-    x.style.display = "block";
-	y.style.display = "block";
-  } 
-}
+	let totalcrd = 0;
+	let s = Array(6);
 
-function calculate(){
-  var sum = 0;
-  var s = 
-  [document.getElementById('s1').value,
-  document.getElementById('s2').value,
-  document.getElementById('s3').value,
-  document.getElementById('s4').value,
-  document.getElementById('s5').value,
-  document.getElementById('s6').value];//s[] = 入力値(intでなくvar)
-  for (var i = 0; i < s.length ; i++){
-  sum += parseInt(s[i]);//paseInt(x)-> var x => int x
-  }
-  document.getElementById("totalcrd").innerHTML = sum;
-}
+	// DBに保存された値をセット
+	window.onload = function() {
+		document.getElementById('s1').value = {{ user.senmon }};
+		document.getElementById('s2').value = {{ user.suuri }};
+		document.getElementById('s3').value = {{ user.gengo }};
+		document.getElementById('s4').value = {{ user.jinbun }};
+		document.getElementById('s5').value = {{ user.kenkou }};
+		document.getElementById('s6').value = {{ user.kougaku }};
+	};
 
-//function creditLoad(s){
-//	url = /* お願いします */;
-//	$("myDIV").load(url);
-//}
+	// 確定ボタンを押した時の処理
+	function myFunction() {
+		let x = document.getElementById("myDIV");
+		// let y = document.getElementById("myDIV2");
+		if (x.style.display === "none" /*&& y.style.display === "none"*/) {
+			x.style.display = "block";
+			// y.style.display = "block";
+		}
 
-//function creditLoad2(s){
-//	url = /* お願いします */;
-//	$("myDIV2").load(url);
-//}
+		// 入力された単位の取得
+		s = [
+			parseInt(document.getElementById('s1').value),
+			parseInt(document.getElementById('s2').value),
+			parseInt(document.getElementById('s3').value),
+			parseInt(document.getElementById('s4').value),
+			parseInt(document.getElementById('s5').value),
+			parseInt(document.getElementById('s6').value)
+		];
+
+		// ajaxで単位を保存、ロード
+		creditLoad();
+
+		// シミュレーション
+		// creditLoad2();
+
+		// 計算
+		// calculate()
+	}
+
+	// 単位の合計を計算する
+	function calculate() {
+		let sum = 0;
+		// s = [
+		// 	parseInt(document.getElementById('s1').value),
+		// 	parseInt(document.getElementById('s2').value),
+		// 	parseInt(document.getElementById('s3').value),
+		// 	parseInt(document.getElementById('s4').value),
+		// 	parseInt(document.getElementById('s5').value),
+		// 	parseInt(document.getElementById('s6').value)
+		// ]; //s[] = 入力値(intでなくlet)
+		// for (let i = 0; i < s.length; i++) {
+		// 	sum += parseInt(s[i]); //paseInt(x)-> let x => int x
+		// }
+		document.getElementById("totalcrd").innerHTML = sum;
+	}
+
+	// 単位保存と読み込み
+	function creditLoad(){
+		let url = "/sim_get/" + s;
+		$.ajax({
+			type: 'GET',
+			url: url,
+			success: function (data) {
+				$('#myDIV').html(data);
+			}
+		})
+	}
+
+	function creditLoad2(){
+		let url = ""/* お願いします */;
+		// $("#myDIV2").load(url);
+	}
 </script>
 {% endblock %}
