--- a/tanni/templates/tanni/sim.html
+++ b/tanni/templates/tanni/sim.html
@@ -91,8 +91,8 @@
 	<button onclick="myFunction()">確定</button>
 </div>
 
-<div class="wrapper" id="myDIV" style="display:none">
-	<div class='left'>
+<div class="row" id="myDIV" style="display:none">
+	<div class='col-md-6'>
 		<div>
 			<p>
 				＜スラサポ登録分＞
@@ -130,7 +130,7 @@
 		</div>
 	</div>
 
-	<!-- <div class='right'>
+	<!-- <div class='md-6'>
 		<div id="myDIV2" style="display:none">
 			<p>
 
