--- a/tanni/templates/tanni/sim_tanni.html
+++ b/tanni/templates/tanni/sim_tanni.html
@@ -1,4 +1,4 @@
-<div class="left">
+<div class="col-md-6">
     <p>＜取得単位＞（うち取得予定単位）</p>
     <table class="b">
         <tr>
@@ -31,12 +31,12 @@
         </tr>
     </table>
 </div>
-<div class="right">
+<div class="col-md-6">
     <p>＜卒業必要単位＞: {{ required }}</p>
     <p>{{ message }}</p>
-    {% if diff >= 0 %}
-    <p>OK</p>
+    {% if diff <= 0 %}
+    <p class="text-primary">OK</p>
     {% else %}
-    <p>残り{{ diff }}単位必要}</p>
+    <p class="text-danger">残り{{ diff }}単位必要</p>
     {% endif %}
 </div>
