--- a/tanni/templates/tanni/myDIV4.html
+++ b/tanni/templates/tanni/myDIV4.html
@@ -1,4 +1,4 @@
-<table class="a" id="display-table-3">
+<table class="table table-striped table-bordered" id="display-table-3">
     <thead>
         <th>科目群</th>
         <th>科目名</th>
