--- a/tanni/templates/tanni/sim.html
+++ b/tanni/templates/tanni/sim.html
@@ -1,62 +1,10 @@
 {% extends 'tanni/base.html' %}
-{% block style %}
-<style>
-	.center {
-		margin: auto;
-		width: 50%;
-		text-align: center;
-		border: 0px solid green;
-		padding: 10px;
-	}
-
-	table.a {
-		font-family: arial, sans-serif;
-		border-collapse: collapse;
-		width: 100%;
-	}
-
-	table.b {
-		font-family: arial, sans-serif;
-		border-collapse: collapse;
-		width: 30%;
-	}
-
-	td,
-	th {
-		border: 1px solid #dddddd;
-		text-align: left;
-		padding: 8px;
-	}
-
-	.wrapper {
-		display: flex;
-		flex-direction: row;
-	}
-
-	.right {
-		width: 50%;
-	}
-
-	.left {
-		width: 50%;
-	}
-
-	#myDIV {
-		width: 100%;
-		padding: 0px 0;
-		text-align: left;
-		background-color: none;
-		margin-top: 0px;
-	}
-</style>
-{% endblock %}
-
 {% block content %}
 <p>卒業に必要な単位のシミュレーションを行います。</p>
 <p>＜取得済み単位＞</p>
 <p>スラサポ利用前（２０１９年度後期以前）</p>
 <p>科目群ごとに取得した単位数を入力し、確定をクリックしてください。</p>
-<table class="a">
+<table class="table table-striped table-bordered">
 	<thread>
 		<th>科目群</th>
 		<th>単位数</th>
@@ -87,7 +35,7 @@
 	</tr>
 </table>
 
-<div class="center">
+<div style="text-align:center">
 	<button onclick="myFunction()">確定</button>
 </div>
 
