reg-table-3-desgin-fix

--- a/tanni/templates/tanni/reg.html
+++ b/tanni/templates/tanni/reg.html
@@ -322,6 +322,7 @@
 					rowSelected.style.backgroundColor = "";
 					rowSelected.style.color = "";
 					CF2[rowId] -= 1;
+					subjLoad(CF2);
 					if (CF2.every(ZF) === true && SF === 1) {
 						myFunction2();
 						SF = 0;
