--- a/tanni/templates/tanni/sim_tanni.html
+++ b/tanni/templates/tanni/sim_tanni.html
@@ -1,6 +1,6 @@
 <div class="col-md-6">
     <p>＜取得単位＞（うち取得予定単位）</p>
-    <table class="b">
+    <table class="table table-striped table-bordered">
         <tr>
             <td>専門</td>
             <td>{{ senmon }}</td>
