--- a/tanni/templates/tanni/reg.html
+++ b/tanni/templates/tanni/reg.html
@@ -2,28 +2,30 @@
 {% block content %}
 科目の登録・変更を行います。<br>
 下の時間割から登録・変更したい時間をクリックしてください。<br>
-
-<table class="table table-striped table-bordered" id="display-table">
-	<thead>
-		<th></th>
-		<th>月</th>
-		<th>火</th>
-		<th>水</th>
-		<th>木</th>
-		<th>金</th>
-		<th>土</th>
-	</thead>
-	<tbody>
-		{% for jk in time_table %}
-		<tr>
-			<th scope="row">{{ forloop.counter }}限</th>
-			{% for j in jk %}
-			<td>{{ j }}</td>
+<div class="table-responsive">
+	<table class="table table-striped table-bordered" id="display-table">
+		<thead>
+			<tr>
+				<th scope="col" style="width: 10%">時限</th>
+				<th scope="col" style="width: 15%" class="text-center">月</th>
+				<th scope="col" style="width: 15%" class="text-center">火</th>
+				<th scope="col" style="width: 15%" class="text-center">水</th>
+				<th scope="col" style="width: 15%" class="text-center">木</th>
+				<th scope="col" style="width: 15%" class="text-center">金</th>
+				<th scope="col" style="width: 15%" class="text-center">土</th>
+			</tr>
+		<tbody>
+			{% for jk in time_table %}
+			<tr>
+				<th scope="row">{{ forloop.counter }}限</th>
+				{% for j in jk %}
+				<td>{{ j }}</td>
+				{% endfor %}
+			</tr>
 			{% endfor %}
-		</tr>
-		{% endfor %}
-	</tbody>
-</table>
+		</tbody>
+	</table>
+</div>
 
 <div id="myDIV6" style="display:none">
 	<p>
