--- a/tanni/templates/tanni/userinfo.html
+++ b/tanni/templates/tanni/userinfo.html
@@ -1,26 +1,30 @@
 {% extends 'tanni/base.html' %}
 {% block content %}
-    <p>aa00001としてログインしています。</p>
-    <p>ホーム画面へ戻る</p>
     <p>{{ selected_user.username }}さん({{ selected_user.student_id }})の履修科目</p>
     <!--時間割…授業名と教員名(イニシャル)を表示-->
-    <table class = "table table-hover table-sm table-bordered">
-        <tr class = "table-primary">
-            <th>\</th>
-            <th>月</th>
-            <th>火</th>
-            <th>水</th>
-            <th>木</th>
-            <th>金</th>
-            <th>土</th>
-        </tr>
-        {% for jk in time_table %}
-        <tr>
-            <th scope="row">{{ forloop.counter }}限</th>
-            {% for j in jk %}
-                <td>{{ j }}</td>
-            {% endfor %}
-        </tr>
-        {% endfor %}
-    </table>
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th scope="col" style="width: 10%">時限</th>
+                    <th scope="col" style="width: 15%" class="text-center">月</th>
+                    <th scope="col" style="width: 15%" class="text-center">火</th>
+                    <th scope="col" style="width: 15%" class="text-center">水</th>
+                    <th scope="col" style="width: 15%" class="text-center">木</th>
+                    <th scope="col" style="width: 15%" class="text-center">金</th>
+                    <th scope="col" style="width: 15%" class="text-center">土</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for jk in time_table %}
+                <tr>
+                    <th scope="row">{{ forloop.counter }}限</th>
+                    {% for j in jk %}
+                    <td>{{ j }}</td>
+                    {% endfor %}
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
