--- a/tanni/templates/tanni/reg.html
+++ b/tanni/templates/tanni/reg.html
@@ -1,9 +1,13 @@
+<!--Name   : W3 登録画面
+Designer: al18112, al18056
+Updated : 2020/07/20
+-->
 {% extends 'tanni/base.html' %}
 {% block content %}
 科目の登録・変更を行います。<br>
 下の時間割から登録・変更したい時間をクリックしてください。<br>
 <div class="table-responsive">
-	<table class="table table-striped table-bordered" id="display-table">
+	<table class="table table-striped table-bordered" id="reg_table">
 		<thead>
 			<tr>
 				<th scope="col" style="width: 10%">時限</th>
@@ -14,6 +18,7 @@
 				<th scope="col" style="width: 15%" class="text-center">金</th>
 				<th scope="col" style="width: 15%" class="text-center">土</th>
 			</tr>
+		</thead>
 		<tbody>
 			{% for jk in time_table %}
 			<tr>
@@ -27,143 +32,123 @@
 	</table>
 </div>
 
-<div id="myDIV6" style="display:none">
+<div id="chs_msg" style="display:none">
 	<p>
-		選択中：<a id=week></a>曜<a id=period></a>限(現在登録科目：<a id=cSubjId></a>)<br>
+		選択中：<a id=week></a>曜<a id=period></a>限(現在登録科目：<a id=c_subj_name></a>)<br>
 	</p>
 </div>
 
-<div id="myDIV5" style="display:none">
+<div id="reg_edit" style="display:none">
 	<p>
-		<button onclick="myFunction();myFunction5()">変更する</button>
-	<form action="{% url 'tanni:reg_delete' %}" method="POST">
-		{% csrf_token %}
-		<input type="hidden" id="del_week" name="week">
-		<input type="hidden" id="del_period" name="period">
-		<input type="submit" value="削除する"><br><br>
-	</form>
+		<button onclick="subj_grp_sw();reg_edit_sw()">変更する</button>
+		<form action="{% url 'tanni:reg_delete' %}" method="POST">
+			{% csrf_token %}
+			<input type="hidden" id="del_week" name="削除週間">
+			<input type="hidden" id="del_period" name="削除時限">
+			<input type="submit" value="削除する"><br><br>
+		</form>
 	</p>
 </div>
 
 
 <div class="row">
     <div class="col-xl-4">
-		<div id="myDIV" style="display:none">
+		<div id="subj_grp" style="display:none">
 			<p>
-			科目群を選択してください。<br>
-			<table class="table table-striped table-bordered w-50" id="display-table-2">
-				<tr>
-					<td>専門</td>
-				</tr>
-				<tr>
-					<td>共通数理</td>
-				</tr>
-				<tr>
-					<td>言語・情報系</td>
-				</tr>
-				<tr>
-					<td>人文社会系教養</td>
-				</tr>
-				<tr>
-					<td>共通健康</td>
-				</tr>
-				<tr>
-					<td>共通工学系教養</td>
-				</tr>
-			</table>
+				科目群を選択してください。<br>
+				<table class="table table-striped table-bordered w-50" id="subj_grp_table">
+					<tr>
+						<td>専門</td>
+					</tr>
+					<tr>
+						<td>共通数理</td>
+					</tr>
+					<tr>
+						<td>言語・情報系</td>
+					</tr>
+					<tr>
+						<td>人文社会系教養</td>
+					</tr>
+					<tr>
+						<td>共通健康</td>
+					</tr>
+					<tr>
+						<td>共通工学系教養</td>
+					</tr>
+				</table>
 			</p>
 		</div>
 	</div>
 	<div class="col-xl-8">
-		<div id="myDIV2" style="display:none">
-			追加したい科目名をクリックしてください。
-			<div id="myDIV4">
-			</div>
+		<div id="subj" style="display:none">
+			<p>
+				追加したい科目名をクリックしてください。
+				<div id="in_subj_table">
+				</div>
+			</p>
 		</div>
 	</div>
 </div>
 
-<div id="myDIV3" style="display:none">
+<div id="submit_data" style="display:none">
 	<p>
 		<br>
+		（選択中：<a id=n_subj_name></a>）
+		<form action="{% url 'tanni:reg_add' %}" method="POST">
+			{% csrf_token %}
+			<input type="hidden" id="course_id" name="course_id">
+			<input type="hidden" id="submit_week" name="week">
+			<input type="hidden" id="submit_period" name="period">
+			<input type="hidden" id="subject" name="subject">
+			<input type="submit" value="追加する">
+		</form>
 		<br>
-		（選択中：<a id=nSubjId></a>）
-	<form action="{% url 'tanni:reg_add' %}" method="POST">
-		{% csrf_token %}
-		<input type="hidden" id="course_id" name="course_id">
-		<input type="hidden" id="submit_week" name="week">
-		<input type="hidden" id="submit_period" name="period">
-		<input type="hidden" id="nSubjGrpId" name="科目群名">
-		<input type="hidden" id="subject" name="subject">
-		<input type="hidden" id="tchr" name="教員">
-		<input type="hidden" id="cmp" name="キャンパス">
-		<input type="hidden" id="crd" name="単位">
-		<input type="submit" value="追加する"><br><br>
-	</form>
 	</p>
 </div>
 {% endblock %}
 {% block script %}
 <script>
-	let OF = 0;//新しく追加
-	let CF = 0;
-	let CF2 = [0, 0, 0, 0, 0, 0];
-	let subjName = ["専門", "共通数理", "言語・情報系", "人文社会系教養", "共通健康", "共通工学系教養"];
-	let SF = 0;
-	let CF3 = 0;
-	let week = 2;
-	let period = 2;
-	let nSubjGrpId = "";
-	let nSubjId = "";
-	let tchr = "";
-	let cmp = "";
-	let crd = 0;
-	let cSubjId = "";
-	let ZF = (currentValue) => currentValue == 0;
-	function myFunction() {
-		var x = document.getElementById("myDIV");
+	let CF = 0; 
+	let FF = 0;
+	let subj_grp_chsd = [0, 0, 0, 0, 0, 0]; 
+	let SF = 0; 
+	let TF = 0; 
+	let week = 2; 
+	let period = 2;　
+	let n_subj_name = ""; 
+	let c_subj_name = "";　
+	let ZF = (currentValue) => currentValue == 0; 
+	function subj_grp_sw() {
+	/*科目群テーブルの表示有無
+	
+	Args:
+		なし
+		
+	Returns:
+		なし
+	
+	*/
+		var x = document.getElementById("subj_grp");
 		if (x.style.display === "none") {
 			x.style.display = "block";
-			OF = 0;//新しく追加
+			CF = 0;
 		}
 		else {
 			x.style.display = "none";
 		}
 	}
 
-	function myFunction2() {
-		var x = document.getElementById("myDIV2");
-		if (x.style.display === "none") {
-			x.style.display = "block";
-		}
-		else {
-			x.style.display = "none";
-		}
-	}
-
-	function myFunction3() {
-		var x = document.getElementById("myDIV3");
-		if (x.style.display === "none") {
-			x.style.display = "block";
-		}
-		else {
-			x.style.display = "none";
-		}
-	}
-
-	function myFunction5() {
-		var x = document.getElementById("myDIV5");
-		if (x.style.display === "none") {
-			x.style.display = "block";
-			OF = 1;//新しく追加
-		}
-		else {
-			x.style.display = "none";
-		}
-	}
-
-	function myFunction6() {
-		var x = document.getElementById("myDIV6");
+	function subj_sw() {
+	/*科目テーブルの表示有無
+	
+	Args:
+		なし
+		
+	Returns:
+		なし
+	
+	*/
+		var x = document.getElementById("subj");
 		if (x.style.display === "none") {
 			x.style.display = "block";
 		}
@@ -172,22 +157,97 @@
 		}
 	}
 
-	function subjLoad(CF2) {
-		// CF2[]=科目群、0=専門、1=共通数理…
-		let url = "/reg_get/" + CF2 + "/" + week + "/" + period + "/";
+	function submit_data_sw() {
+	/*「追加する」ボタンの表示有無
+	
+	Args:
+		なし
+		
+	Returns:
+		なし
+	
+	*/
+		var x = document.getElementById("submit_data");
+		if (x.style.display === "none") {
+			x.style.display = "block";
+		}
+		else {
+			x.style.display = "none";
+		}
+	}
+
+	function reg_edit_sw() {
+	/*「変更する・削除する」ボタンの表示有無
+	
+	Args:
+		なし
+		
+	Returns:
+		なし
+	
+	*/
+		var x = document.getElementById("reg_edit");
+		if (x.style.display === "none") {
+			x.style.display = "block";
+			CF = 1;
+		}
+		else {
+			x.style.display = "none";
+		}
+	}
+
+	function chs_msg_sw() {
+	/*現在選択中科目のメッセージの表示有無
+	
+	Args:
+		chs_msg
+		
+	Returns:
+		なし
+	
+	*/
+		var x = document.getElementById("chs_msg");
+		if (x.style.display === "none") {
+			x.style.display = "block";
+		}
+		else {
+			x.style.display = "none";
+		}
+	}
+
+	function subj_load(subj_grp_chsd) {
+	/*科目の読み込み処理
+	
+	Args:
+		subj_grp_chsd：選択中の科目群
+		
+	Returns:
+		なし
+	
+	*/
+		let url = "/reg_get/" + subj_grp_chsd + "/" + week + "/" + period + "/";
 		$.ajax({
 			type: 'GET',
 			url: url,
 			success: function (data) {
-				$('#myDIV4').html(data);
-				choose3();
+				$('#in_subj_table').html(data);
+				chs_subj();
 			}
 		})
 	}
 	
-	choose1();
-	function choose1() {
-		let table = document.getElementById('display-table');
+	chs_period();
+	function chs_period() {
+	/*時間割のクリック処理
+	
+	Args:
+		なし
+		
+	Returns:
+		なし
+	
+	*/
+		let table = document.getElementById('reg_table');
 		let cells = table.getElementsByTagName('td');
 
 		for (var i = 0; i < cells.length; i++) {
@@ -195,182 +255,226 @@
 
 			// セルがクリックされたとき
 			cell.onclick = function () {
-				let rowId = this.parentNode.rowIndex - 1;
-				let cellId = this.cellIndex - 1;
-				let CellSelected = table.getElementsByTagName('td')[cellId + rowId * 6];
-				let TempR = cellId + rowId * 6;
-				let cellsNotSelected = cells;
+				let row_id = this.parentNode.rowIndex - 1;
+				let cell_id = this.cellIndex - 1;
+				let cell_selected = table.getElementsByTagName('td')[cell_id + row_id * 6];
+				let cells_not_selected = cells;
 
 				// 削除するフォームのhidden要素に値をセットする
-				week = document.getElementById("del_week").value = cellId + 1;
-				period = document.getElementById("del_period").value = rowId + 1;
+				week = document.getElementById("del_week").value = cell_id + 1;
+				period = document.getElementById("del_period").value = row_id + 1;
 				
 				// すでに選択されている場合 → returnで抜ける
-				if (CellSelected.style.backgroundColor === "yellow") {
-					CellSelected.style.backgroundColor = "";
-					CellSelected.style.color = "";
-					if (document.getElementById("myDIV").style.display === "block") {
-						myFunction();
+				if (cell_selected.style.backgroundColor === "yellow") {
+					cell_selected.style.backgroundColor = "";
+					cell_selected.style.color = "";
+					
+					if (document.getElementById("subj_grp").style.display === "block") {
+						subj_grp_sw();
 					}
+					
 					else {
-						myFunction5();
+						reg_edit_sw();
 					}
-					myFunction6();
-					CF = 0;
-					if (SF === 1)
-						choose2();
-					if (CF3 === 1)
-						choose3();
+					
+					chs_msg_sw();
+					FF = 0;
+					
+					if (SF === 1){
+						chs_subj_grp();
+					}
+					
+					if (TF === 1){
+						chs_subj();
+					}
 						
 					return;
 				}
 
 				// セルが未選択の場合
 				// ほかのセルは非選択にする
-				for (var c = 0; c < cellsNotSelected.length; c++) {
-					cellsNotSelected[c].style.backgroundColor = "";
-					cellsNotSelected[c].style.color = "";
+				for (var c = 0; c < cells_not_selected.length; c++) {
+					cells_not_selected[c].style.backgroundColor = "";
+					cells_not_selected[c].style.color = "";
 				}
 
 				// セルの色を変える
-				CellSelected.style.backgroundColor = "yellow";
-				CellSelected.style.color = "red";
-				rowId += 1;
-				if (table.rows[rowId].cells[cellId + 1].innerHTML === "")
-					document.getElementById("cSubjId").innerHTML = "無";
-				else {
-					document.getElementById("cSubjId").innerHTML = table.rows[rowId].cells[cellId + 1].innerHTML;
-				}
-				document.getElementById("week").innerHTML = table.rows[0].cells[cellId + 1].innerHTML;
-				document.getElementById("period").innerHTML = rowId;
-								
-				//新しく追加（↓）
-				if(CF === 1){
-					if(document.getElementById("cSubjId").innerHTML === "無" && OF === 1){
-						CF = 0;
-						if(SF === 1)
-							choose2();
-						if(CF3 === 1)
-							choose3();
-						myFunction5();
-						myFunction();
-						OF = 0;		
-						CF = 1;
-					}
-					else if(document.getElementById("cSubjId").innerHTML != "無" && OF === 0){
-						CF = 0;
-						if(SF === 1)
-							choose2();
-						if(CF3 === 1)
-							choose3();
-						myFunction();
-						myFunction5();
-						OF = 1;	
-						CF = 1;
-					}
-					else {
-						CF = 0;
-						if(SF === 1)
-							choose2();
-						if(CF3 === 1)
-							choose3();
-						CF = 1;
-					}
-				}
-				//新しく追加（↑）
+				cell_selected.style.backgroundColor = "yellow";
+				cell_selected.style.color = "red";
+				row_id += 1;
 				
-				if (CF === 0) {
-					if (document.getElementById("cSubjId").innerHTML === "無") {
-						myFunction();
-						OF = 0;//新しく追加
+				if (table.rows[row_id].cells[cell_id + 1].innerHTML === ""){
+					document.getElementById("c_subj_name").innerHTML = "無";
+				}
+				
+				else {
+					document.getElementById("c_subj_name").innerHTML = table.rows[row_id].cells[cell_id + 1].innerHTML;
+				}
+				
+				document.getElementById("week").innerHTML = table.rows[0].cells[cell_id + 1].innerHTML;
+				document.getElementById("period").innerHTML = row_id;
+								
+				if(FF === 1){
+
+					if(document.getElementById("c_subj_name").innerHTML === "無" && CF === 1){
+						FF = 0;
+						if(SF === 1)
+							chs_subj_grp();
+						if(TF === 1)
+							chs_subj();
+						reg_edit_sw();
+						subj_grp_sw();
+						CF = 0;		
+						FF = 1;
 					}
+					
+					else if(document.getElementById("c_subj_name").innerHTML != "無" && CF === 0){
+						FF = 0;
+						if(SF === 1)
+							chs_subj_grp();
+						if(TF === 1)
+							chs_subj();
+						subj_grp_sw();
+						reg_edit_sw();
+						CF = 1;	
+						FF = 1;
+					}
+					
 					else {
-						myFunction5();
-						OF = 1;//新しく追加
+						FF = 0;
+						if(SF === 1)
+							chs_subj_grp();
+						if(TF === 1)
+							chs_subj();
+						FF = 1;
 					}
-					myFunction6();
-					CF = 1;
+					
+				}
+				
+				if (FF === 0) {
+				
+					if (document.getElementById("c_subj_name").innerHTML === "無") {
+						subj_grp_sw();
+						CF = 0;
+					}
+					
+					else {
+						reg_edit_sw();
+						CF = 1;
+					}
+					
+					chs_msg_sw();
+					FF = 1;
 				}
 			}
 		}
 	}
 	
-	choose2();
-	function choose2() {
-
-		var table = document.getElementById('display-table-2');
+	chs_subj_grp();
+	function chs_subj_grp() {
+	/*科目群テーブルのクリック処理
+	
+	Args:
+		なし
+		
+	Returns:
+		なし
+	
+	*/
+		var table = document.getElementById('subj_grp_table');
 		var cells = table.getElementsByTagName('td');
 		var rows = table.getElementsByTagName('tr');
 
-		if (CF === 0 && SF === 1) {
+		if (FF === 0 && SF === 1) {
+		
 			for (var i = 0; i < rows.length; i++) {
 				rows[i].style.backgroundColor = "";
 				rows[i].style.color = "";
 			}
-			CF2.fill(0);
+			
+			subj_grp_chsd.fill(0);
 			SF = 0;
-			myFunction2();
+			subj_sw();
+			
 			return;
 		}
 
 		for (var i = 0; i < cells.length; i++) {
+		
 			var cell = cells[i];
+			
 			cell.onclick = function () {
-				var rowId = this.parentNode.rowIndex;
-				var rowSelected = table.getElementsByTagName('tr')[rowId];
+				var row_id = this.parentNode.rowIndex;
+				var rowSelected = table.getElementsByTagName('tr')[row_id];
 				var rowsNotSelected = table.getElementsByTagName('tr');
 
 				if (rowSelected.style.backgroundColor === "yellow") {
 					rowSelected.style.backgroundColor = "";
 					rowSelected.style.color = "";
-					CF2[rowId] -= 1;
-					subjLoad(CF2);
-					if (CF2.every(ZF) === true && SF === 1) {
-						myFunction2();
+					subj_grp_chsd[row_id] -= 1;
+					subj_load(subj_grp_chsd);
+					
+					if (subj_grp_chsd.every(ZF) === true && SF === 1) {
+						subj_sw();
 						SF = 0;
 					}
+					
 					return;
 				}
 				rowSelected.style.backgroundColor = "yellow";
 				rowSelected.style.color = "red";
-				CF2[rowId] += 1;
-				subjLoad(CF2);
-				if (CF2.every(ZF) === false && SF === 0) {
-					myFunction2();
+				subj_grp_chsd[row_id] += 1;
+				subj_load(subj_grp_chsd);
+				
+				if (subj_grp_chsd.every(ZF) === false && SF === 0) {
+					subj_sw();
 					SF = 1;
 				}
+				
 			}
 		}
 	}
 
-	function choose3() {
-
-		var table = document.getElementById('display-table-3');
+	function chs_subj() {
+	/*科目テーブルのクリック処理
+	
+	Args:
+		なし
+		
+	Returns:
+		なし
+	
+	*/
+		var table = document.getElementById('subj_table');
 		var cells = table.getElementsByTagName('td');
 		var rows = table.getElementsByTagName('tr');
 
-		if (CF === 0 && CF3 === 1) {
+		if (FF === 0 && TF === 1) {
+		
 			for (var i = 0; i < rows.length; i++) {
 				rows[i].style.backgroundColor = "";
 				rows[i].style.color = "";
 			}
-			myFunction3();
-			CF3 = 0;
+			
+			submit_data_sw();
+			TF = 0;
 			return;
 		}
 
 		for (var i = 0; i < cells.length; i++) {
+		
 			var cell = cells[i];
+			
 			cell.onclick = function () {
-				var rowId = this.parentNode.rowIndex;
-				var rowSelected = table.getElementsByTagName('tr')[rowId];
+				var row_id = this.parentNode.rowIndex;
+				var rowSelected = table.getElementsByTagName('tr')[row_id];
 				var rowsNotSelected = table.getElementsByTagName('tr');
 
 				if (rowSelected.style.backgroundColor === "yellow") {
 					rowSelected.style.backgroundColor = "";
 					rowSelected.style.color = "";
-					myFunction3();
-					CF3 = 0;
+					submit_data_sw();
+					TF = 0;
 					return;
 				}
 
@@ -382,21 +486,15 @@
 				rowSelected.style.backgroundColor = "yellow";
 				rowSelected.style.color = "red";
 
-				if (CF3 === 0) {
-					myFunction3();
-					CF3 = 1;
+				if (TF === 0) {
+					submit_data_sw();
+					TF = 1;
 				}
 				
-				document.getElementById("nSubjGrpId").innerHTML = table.rows[rowId].cells[0].innerHTML;
-				document.getElementById("nSubjId").innerHTML = table.rows[rowId].cells[1].innerHTML;
-				document.getElementById("tchr").innerHTML = table.rows[rowId].cells[2].innerHTML;
-				document.getElementById("cmp").innerHTML = table.rows[rowId].cells[3].innerHTML;
-				document.getElementById("crd").innerHTML = table.rows[rowId].cells[4].innerHTML;
-				
-				document.getElementById("subject").value = table.rows[rowId].cells[1].innerHTML;
+				document.getElementById("n_subj_name").innerHTML = table.rows[row_id].cells[1].innerHTML;			
+				document.getElementById("subject").value = table.rows[row_id].cells[1].innerHTML;
 				document.getElementById("submit_week").value = week;
 				document.getElementById("submit_period").value = period;
-				
 				
 			}
 		}
