--- a/tanni/templates/tanni/sim.html
+++ b/tanni/templates/tanni/sim.html
@@ -1,3 +1,7 @@
+<!--Name   : W5 登録画面 
+Designer: al18112, al18056
+Updated : 2020/07/20
+-->
 {% extends 'tanni/base.html' %}
 {% block content %}
 <p>卒業に必要な単位のシミュレーションを行います。</p>
@@ -5,41 +9,41 @@
 <p>スラサポ利用前（２０１９年度後期以前）</p>
 <p>科目群ごとに取得した単位数を入力し、確定をクリックしてください。</p>
 <table class="table table-striped table-bordered">
-	<thread>
+	<thead>
 		<th>科目群</th>
 		<th>単位数</th>
-	</thread>
+	</thead>
 	<tr>
 		<td>専門</td>
-		<td><input type="number" id="s1" name="spec" min="0" max="99" value="0"></td>
+		<td><input type="number" id="spec" name="spec" min="0" max="99" value="0"></td>
 	</tr>
 	<tr>
 		<td>共通数理</td>
-		<td><input type="number" id="s2" name="math" min="0" max="99" value="0"></td>
+		<td><input type="number" id="math" name="math" min="0" max="99" value="0"></td>
 	</tr>
 	<tr>
 		<td>言語・情報系</td>
-		<td><input type="number" id="s3" name="lang" min="0" max="99" value="0"></td>
+		<td><input type="number" id="lang" name="lang" min="0" max="99" value="0"></td>
 	</tr>
 	<tr>
 		<td>人文社会系教養</td>
-		<td><input type="number" id="s4" name="social" min="0" max="99" value="0"></td>
+		<td><input type="number" id="social" name="social" min="0" max="99" value="0"></td>
 	</tr>
 	<tr>
 		<td>共通健康</td>
-		<td><input type="number" id="s5" name="health" min="0" max="99" value="0"></td>
+		<td><input type="number" id="health" name="health" min="0" max="99" value="0"></td>
 	</tr>
 	<tr>
 		<td>共通工学系教養</td>
-		<td><input type="number" id="s6" name="engine" min="0" max="99" value="0"></td>
+		<td><input type="number" id="engine" name="engine" min="0" max="99" value="0"></td>
 	</tr>
 </table>
 
 <div style="text-align:center">
-	<button onclick="myFunction()">確定</button>
+	<button onclick="cal_crd_sw()">確定</button>
 </div>
 
-<div class="row" id="myDIV" style="display:none">
+<div class="row" id="sim_tanni" style="display:none">
 </div>
 {% endblock %}
 
@@ -50,75 +54,69 @@
 
 	// DBに保存された値をセット
 	window.onload = function() {
-		document.getElementById('s1').value = {{ user.senmon }};
-		document.getElementById('s2').value = {{ user.suuri }};
-		document.getElementById('s3').value = {{ user.gengo }};
-		document.getElementById('s4').value = {{ user.jinbun }};
-		document.getElementById('s5').value = {{ user.kenkou }};
-		document.getElementById('s6').value = {{ user.kougaku }};
+	/*画面に入力した値を単位計算用変数に代入する処理
+	
+	Args:
+		なし
+		
+	Returns:
+		なし
+	
+	*/
+		document.getElementById('spec').value = {{ user.senmon }};
+		document.getElementById('math').value = {{ user.suuri }};
+		document.getElementById('lang').value = {{ user.gengo }};
+		document.getElementById('social').value = {{ user.jinbun }};
+		document.getElementById('health').value = {{ user.kenkou }};
+		document.getElementById('engine').value = {{ user.kougaku }};
 	};
 
-	// 確定ボタンを押した時の処理
-	function myFunction() {
-		let x = document.getElementById("myDIV");
-		// let y = document.getElementById("myDIV2");
-		if (x.style.display === "none" /*&& y.style.display === "none"*/) {
+	function cal_crd_sw() {
+	/*取得単位と卒業必要単位の表示有無
+	
+	Args:
+		なし
+		
+	Returns:
+		なし
+	
+	*/
+		let x = document.getElementById("sim_tanni");
+		if (x.style.display === "none") {
 			x.style.display = "block";
-			// y.style.display = "block";
 		}
-
-		// 入力された単位の取得
-		s = [
-			parseInt(document.getElementById('s1').value),
-			parseInt(document.getElementById('s2').value),
-			parseInt(document.getElementById('s3').value),
-			parseInt(document.getElementById('s4').value),
-			parseInt(document.getElementById('s5').value),
-			parseInt(document.getElementById('s6').value)
-		];
 
 		// ajaxで単位を保存、ロード
 		creditLoad();
-
-		// シミュレーション
-		// creditLoad2();
-
-		// 計算
-		// calculate()
 	}
 
-	// 単位の合計を計算する
-	function calculate() {
-		let sum = 0;
-		// s = [
-		// 	parseInt(document.getElementById('s1').value),
-		// 	parseInt(document.getElementById('s2').value),
-		// 	parseInt(document.getElementById('s3').value),
-		// 	parseInt(document.getElementById('s4').value),
-		// 	parseInt(document.getElementById('s5').value),
-		// 	parseInt(document.getElementById('s6').value)
-		// ]; //s[] = 入力値(intでなくlet)
-		// for (let i = 0; i < s.length; i++) {
-		// 	sum += parseInt(s[i]); //paseInt(x)-> let x => int x
-		// }
-		document.getElementById("totalcrd").innerHTML = sum;
-	}
-
-	// 単位保存と読み込み
 	function creditLoad(){
+	/*単位の読み込み処理
+	
+	Args:
+		なし
+		
+	Returns:
+		なし
+	
+	*/
+		s = [
+			parseInt(document.getElementById('spec').value),
+			parseInt(document.getElementById('math').value),
+			parseInt(document.getElementById('lang').value),
+			parseInt(document.getElementById('social').value),
+			parseInt(document.getElementById('health').value),
+			parseInt(document.getElementById('engine').value)
+		];
+		
 		let url = "/sim_get/" + s;
 		$.ajax({
 			type: 'GET',
 			url: url,
 			success: function (data) {
-				$('#myDIV').html(data);
+				$('#sim_tanni').html(data);
 			}
 		})
-	}
-
-	function creditLoad2(){
-		let url = ""/* お願いします */;
-		// $("#myDIV2").load(url);
 	}
 </script>
 {% endblock %}
