--- a/tanni/templates/tanni/sim_tanni.html
+++ b/tanni/templates/tanni/sim_tanni.html
@@ -1,3 +1,7 @@
+<!--Name   : W5 登録画面 単位テーブル
+Designer: al18056, al18112
+Updated : 2020/07/20
+-->
 <div class="col-md-6">
     <p>＜取得単位＞（うち取得予定単位）</p>
     <table class="table table-striped table-bordered">
@@ -27,7 +31,7 @@
         </tr>
         <tr>
             <td>取得済み単位合計</td>
-            <td><a id=totalcrd>{{ sum }}</a></td>
+            <td>{{ sum }}</td>
         </tr>
     </table>
 </div>
