ファイル先頭コメント

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,3 +1,8 @@
+<!--
+Name	  : W1 ログイン画面
+Designer  : al18119, al18056
+Updated   : 2020/07/21
+-->
 {% extends 'account/base.html' %}
 {% block content %}
 
