--- a/tanni/templates/tanni/home.html
+++ b/tanni/templates/tanni/home.html
@@ -1,3 +1,8 @@
+<!--
+Name	  : W2 ホーム画面
+Designer  : al18119
+Updated   : 2020/07/21
+-->
 {% extends 'tanni/base.html' %}
 {% block content %}
 <!--ページタイトル-->
