--- a/tanni/templates/tanni/userinfo.html
+++ b/tanni/templates/tanni/userinfo.html
@@ -1,3 +1,9 @@
+<!--
+Name        : W4 ユーザ一覧画面
+Designer    : al18106
+Updated     :2020/07/21
+-->
+
 {% extends 'tanni/base.html' %}
 {% block content %}
     <p>{{ selected_user.username }}さん({{ selected_user.student_id }})の履修科目</p>
